--- a/apache_configuration.conf
+++ b/apache_configuration.conf
@@ -1,7 +1,7 @@
 <virtualhost *:8080>
         ServerName panorama24-dev.tk
         #ServerAlias *.panorama24-dev.tk
-        WSGIDaemonProcess platx_main user=flask group=www-data threads=5 home=/opt/source python-path=/opt/source:/usr/local/lib/python3.7/dist-packages
+        WSGIDaemonProcess platx_main user=flask group=www-data threads=5 home=/opt/source
         WSGIScriptAlias / /opt/source/platx.wsgi
 
         <directory /opt/source/>
