--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -1,11 +1,11 @@
-<virtualhost *:8080>
-        ServerName qlines-dev.net
-        #ServerAlias *.qlines-dev.net
+<virtualhost *:80>
+        ServerName qlines.net
+        #ServerAlias *.qlines.net
         WSGIDaemonProcess platx_main user=flask group=www-data threads=5 home=/opt/source
         WSGIScriptAlias / /opt/source/platx.wsgi
 
         <directory /opt/source/>
-		Require all granted
+                Require all granted
                 WSGIProcessGroup platx_main
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
@@ -15,4 +15,3 @@
         CustomLog ${APACHE_LOG_DIR}/access_platx.log combined
 
 </virtualhost>
-
