apache template change

--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -1,7 +1,7 @@
 <virtualhost *:80>
         ServerName qlines.net
         #ServerAlias *.qlines.net
-        WSGIDaemonProcess platx_main user=flask group=www-data threads=5 home=/opt/source
+        WSGIDaemonProcess platx_main user=flask group=www-data threads=5 home=/opt/source #python-path=/var/www/site_platx:/usr/local/lib/python3.7/dist-packages
         WSGIScriptAlias / /opt/source/platx.wsgi
 
         <directory /opt/source/>
