change source to app1

--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -1,17 +1,17 @@
 <virtualhost *:80>
-        ServerName qlines.net
-        #ServerAlias *.qlines.net
-        WSGIDaemonProcess platx_main user=flask group=www-data threads=5 home=/opt/source #python-path=/var/www/site_platx:/usr/local/lib/python3.7/dist-packages
-        WSGIScriptAlias / /opt/source/platx.wsgi
+        ServerName app1-dev.net
+        #ServerAlias *.app1-dev.net
+        WSGIDaemonProcess app1_main user=flask group=www-data threads=5 home=/opt/app1
+        WSGIScriptAlias / /opt/app1/platx.wsgi
 
-        <directory /opt/source/>
+        <directory /opt/app1/>
                 Require all granted
                 WSGIProcessGroup platx_main
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
         </directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/error_platx.log
-        CustomLog ${APACHE_LOG_DIR}/access_platx.log combined
+        ErrorLog ${APACHE_LOG_DIR}/error_app1.log
+        CustomLog ${APACHE_LOG_DIR}/access_app1.log combined
 
 </virtualhost>
