fix apache config issue

--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -2,7 +2,7 @@
         ServerName app1-dev.net
         #ServerAlias *.app1-dev.net
         WSGIDaemonProcess app1_main user=flask group=www-data threads=5 home=/opt/app1
-        WSGIScriptAlias / /opt/app1/platx.wsgi
+        WSGIScriptAlias / /opt/app1/app1.wsgi
 
         <directory /opt/app1/>
                 Require all granted
