fix some bugs from platx to app1 name change

--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -6,7 +6,7 @@
 
         <directory /opt/app1/>
                 Require all granted
-                WSGIProcessGroup platx_main
+                WSGIProcessGroup app1_main
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
         </directory>
