--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -15,3 +15,21 @@
         CustomLog ${APACHE_LOG_DIR}/access_app1.log combined
 
 </virtualhost>
+
+<virtualhost *:80>
+        ServerName app2-dev.net
+        #ServerAlias *.app2-dev.net
+        WSGIDaemonProcess app2_main user=flask group=www-data threads=5 home=/opt/app2
+        WSGIScriptAlias / /opt/app2/app2.wsgi
+
+        <directory /opt/app2/>
+                Require all granted
+                WSGIProcessGroup app2_main
+                WSGIApplicationGroup %{GLOBAL}
+                WSGIScriptReloading On
+        </directory>
+
+        ErrorLog ${APACHE_LOG_DIR}/error_app2.log
+        CustomLog ${APACHE_LOG_DIR}/access_app2.log combined
+
+</virtualhost>
