update apache config

--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -1,4 +1,22 @@
 <virtualhost *:80>
+        ServerName qlines.net
+        #ServerAlias *.qlines.net
+        WSGIDaemonProcess app1_main user=flask group=www-data threads=5 home=/opt/app1
+        WSGIScriptAlias / /opt/app1/app1.wsgi
+
+        <directory /opt/app1/>
+                Require all granted
+                WSGIProcessGroup app1_main_prod
+                WSGIApplicationGroup %{GLOBAL}
+                WSGIScriptReloading On
+        </directory>
+
+        ErrorLog ${APACHE_LOG_DIR}/error_app1_prod.log
+        CustomLog ${APACHE_LOG_DIR}/access_app1_prod.log combined
+
+</virtualhost>
+
+<virtualhost *:80>
         ServerName app1-dev.net
         #ServerAlias *.app1-dev.net
         WSGIDaemonProcess app1_main user=flask group=www-data threads=5 home=/opt/app1
