--- a/_apache_site.conf
+++ b/_apache_site.conf
@@ -1,36 +1,36 @@
+
 <virtualhost *:80>
         ServerName qlines.net
         #ServerAlias *.qlines.net
-        WSGIDaemonProcess app1_main user=flask group=www-data threads=5 home=/opt/app1
-        WSGIScriptAlias / /opt/app1/app1.wsgi
+        WSGIDaemonProcess qlines_main user=flask group=www-data threads=5 home=/opt/qlines
+        WSGIScriptAlias / /opt/qlines/qlines.wsgi
 
-        <directory /opt/app1/>
+        <directory /opt/qlines/>
                 Require all granted
-                WSGIProcessGroup app1_main
+                WSGIProcessGroup qlines_main
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
         </directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/error_app1_prod.log
-        CustomLog ${APACHE_LOG_DIR}/access_app1_prod.log combined
+        ErrorLog ${APACHE_LOG_DIR}/error_qlines_prod.log
+        CustomLog ${APACHE_LOG_DIR}/access_qlines_prod.log combined
 </virtualhost>
-
 
 <virtualhost *:80>
         ServerName blog.qlines.net
         ServerAlias blog.qlines.net
-        WSGIDaemonProcess app2_main user=flask group=www-data threads=5 home=/opt/app2
-        WSGIScriptAlias / /opt/app2/app2.wsgi
+        WSGIDaemonProcess blog_main user=flask group=www-data threads=5 home=/opt/blog
+        WSGIScriptAlias / /opt/blog/blog.wsgi
 
-        <directory /opt/app2/>
+        <directory /opt/blog/>
                 Require all granted
-                WSGIProcessGroup app2_main
+                WSGIProcessGroup blog_main
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
         </directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/error_app2_prod.log
-        CustomLog ${APACHE_LOG_DIR}/access_app2_prod.log combined
+        ErrorLog ${APACHE_LOG_DIR}/error_blog_prod.log
+        CustomLog ${APACHE_LOG_DIR}/access_blog_prod.log combined
 </virtualhost>
 
 
@@ -39,37 +39,57 @@
 
 
 <virtualhost *:80>
-        ServerName app1-dev.net
-        #ServerAlias *.app1-dev.net
-        WSGIDaemonProcess app1_main_lab user=flask group=www-data threads=5 home=/opt/app1
-        WSGIScriptAlias / /opt/app1/app1.wsgi
+        ServerName qlines-dev.net
+        #ServerAlias *.qlines-dev.net
+        WSGIDaemonProcess qlines_main_lab user=flask group=www-data threads=5 home=/opt/qlines
+        WSGIScriptAlias / /opt/qlines/qlines.wsgi
 
-        <directory /opt/app1/>
+        <directory /opt/qlines/>
                 Require all granted
-                WSGIProcessGroup app1_main_lab
+                WSGIProcessGroup qlines_main_lab
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
         </directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/error_lab_app1.log
-        CustomLog ${APACHE_LOG_DIR}/access_lab_app1.log combined
+        ErrorLog ${APACHE_LOG_DIR}/error_lab_qlines.log
+        CustomLog ${APACHE_LOG_DIR}/access_lab_qlines.log combined
 
 </virtualhost>
 
 <virtualhost *:80>
-        ServerName app2-dev.net
-        #ServerAlias *.app2-dev.net
-        WSGIDaemonProcess app2_main_lab user=flask group=www-data threads=5 home=/opt/app2
-        WSGIScriptAlias / /opt/app2/app2.wsgi
+        ServerName blog-dev.net
+        #ServerAlias *.blog-dev.net
+        WSGIDaemonProcess blog_main_lab user=flask group=www-data threads=5 home=/opt/blog
+        WSGIScriptAlias / /opt/blog/blog.wsgi
 
-        <directory /opt/app2/>
+        <directory /opt/blog/>
                 Require all granted
-                WSGIProcessGroup app2_main_lab
+                WSGIProcessGroup blog_main_lab
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
         </directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/error_lab_app2.log
-        CustomLog ${APACHE_LOG_DIR}/access_lab_app2.log combined
+        ErrorLog ${APACHE_LOG_DIR}/error_lab_blog.log
+        CustomLog ${APACHE_LOG_DIR}/access_lab_blog.log combined
+
+</virtualhost>
+
+
+
+<virtualhost *:80>
+        ServerName pdf-export.net
+        #ServerAlias *.pdf-export.net
+        WSGIDaemonProcess pdf_export_lab user=flask group=www-data threads=5 home=/opt/pdf_export
+        WSGIScriptAlias / /opt/pdf_export/pdf_export.wsgi
+
+        <directory /opt/pdf_export/>
+                Require all granted
+                WSGIProcessGroup pdf_export_lab
+                WSGIApplicationGroup %{GLOBAL}
+                WSGIScriptReloading On
+        </directory>
+
+        ErrorLog ${APACHE_LOG_DIR}/error_pdf_export.log
+        CustomLog ${APACHE_LOG_DIR}/access_pdf_export.log combined
 
 </virtualhost>
