--- a/DockerConfigFiles/_apache_site.conf
+++ b/DockerConfigFiles/_apache_site.conf
@@ -1,19 +1,61 @@
 <virtualhost *:80>
         ServerName qlines.net
-        #ServerAlias *.qlines.net
-        WSGIDaemonProcess qlines_main user=flask group=www-data threads=5 home=/opt/qlines
+        ServerAlias *.qlines.net
+
+
+        ErrorLog ${APACHE_LOG_DIR}/error_qlines_prod_http.log
+        CustomLog ${APACHE_LOG_DIR}/access_qlines_prod_http.log combined
+
+	Redirect / https://qlines.net/
+
+	RewriteEngine on
+	RewriteCond %{SERVER_NAME} =*.qlines.net [OR]
+	RewriteCond %{SERVER_NAME} =qlines.net
+	RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+</virtualhost>
+<virtualhost *:80>
+        ServerName www.qlines.net
+        ServerAlias *.qlines.net
+
+
+        ErrorLog ${APACHE_LOG_DIR}/error_qlines_prod_http.log
+        CustomLog ${APACHE_LOG_DIR}/access_qlines_prod_http.log combined
+
+        Redirect / https://qlines.net/
+
+        RewriteEngine on
+        RewriteCond %{SERVER_NAME} =*.qlines.net [OR]
+        RewriteCond %{SERVER_NAME} =qlines.net
+        RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+</virtualhost>
+
+
+
+
+
+<virtualhost *:443>
+        ServerName qlines.net
+        ServerAlias *.qlines.net
+
+        WSGIDaemonProcess qlines_main_https user=flask group=www-data threads=5 home=/opt/qlines
         WSGIScriptAlias / /opt/qlines/qlines.wsgi
 
         <directory /opt/qlines/>
                 Require all granted
-                WSGIProcessGroup qlines_main
+                WSGIProcessGroup qlines_main_https
                 WSGIApplicationGroup %{GLOBAL}
                 WSGIScriptReloading On
         </directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/error_qlines_prod.log
-        CustomLog ${APACHE_LOG_DIR}/access_qlines_prod.log combined
+	SSLEngine on
+	SSLCertificateFile /etc/letsencrypt/live/qlines.net/fullchain.pem
+	SSLCertificateKeyFile /etc/letsencrypt/live/qlines.net/privkey.pem
+	Include /etc/letsencrypt/options-ssl-apache.conf
+
+        ErrorLog ${APACHE_LOG_DIR}/error_qlines_prod_https.log
+        CustomLog ${APACHE_LOG_DIR}/access_qlines_prod_https.log combined
 </virtualhost>
+
 
 <virtualhost *:80>
         ServerName qlines-dev.net
@@ -28,8 +70,7 @@
                 WSGIScriptReloading On
         </directory>
 
-        ErrorLog ${APACHE_LOG_DIR}/error_lab_qlines.log
-        CustomLog ${APACHE_LOG_DIR}/access_lab_qlines.log combined
+        ErrorLog ${APACHE_LOG_DIR}/error_qlines_lab.log
+        CustomLog ${APACHE_LOG_DIR}/access_qlines_lab.log combined
 
 </virtualhost>
-
