--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     build: 
       context: ./
       dockerfile: Dockerfile      
-    container_name: qlines_container
+    container_name: qlines_app_container
     restart: unless-stopped
-    ports:
+    #ports:
       #- "80:80" # http
       #- "443:443" # https
-      - "7000-7100:7000-7100" # for mqtt and dbs
-      - "5000:5000"  # gunicorn
+      #- "7000-7100:7000-7100" # for mqtt and dbs
+      #- "5000:5000"  # gunicorn
     volumes:
       - ./:/opt/qlines_app/
     #networks:
