update on 6.4.2023 before changing the dashboard view

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
-version: '3'
-
+version: '1'
 services:
   qlines_app_service:
     build: 
       context: ./
-      dockerfile: Dockerfile      
+      dockerfile: Dockerfile
+    image: qlines_app_image
     container_name: qlines_app_container
     restart: unless-stopped
-    #ports:
-      #- "80:80" # http
-      #- "443:443" # https
-      #- "7000-7100:7000-7100" # for mqtt and dbs
-      #- "5000:5000"  # gunicorn
+    ports:
+      - "80:80" # http
+      - "443:443" # https
+      - "7000-7100:7000-7100" # for mqtt and dbs
+      - "5000:5000"  # gunicorn
     volumes:
       - ./:/opt/qlines_app/
     #networks:
@@ -21,6 +21,9 @@ services:
 #   qlines_net:
 #     driver: bridge
 networks: 
-  default: 
-    external: 
-      name: qlines
+  network_qlines:
+    name: qlines
+    external: True
+  #default: 
+  #  external: 
+  #    name: qlines
