fixing docker-compose network issues after upgrade

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,23 @@
 version: '1'
+
 services:
   qlines_app_service:
-    build: 
+    build:
       context: ./
       dockerfile: Dockerfile
     image: qlines_app_image
     container_name: qlines_app_container
     restart: unless-stopped
-    ports:
-      - "80:80" # http
-      - "443:443" # https
-      - "7000-7100:7000-7100" # for mqtt and dbs
-      - "5000:5000"  # gunicorn
+    #ports:
+    #  - "80:80" # http
+    #  - "443:443" # https
+    #  - "7000-7100:7000-7100" # for mqtt and dbs
+    #  - "5000:5000"  # gunicorn
     volumes:
       - ./:/opt/qlines_app/
-    #networks:
-    # - "qlines_net"
+    networks:
+      - "qlines_net"
 
-# networks:
-#   qlines_net:
-#     driver: bridge
-networks: 
-  network_qlines:
-    name: qlines
-    external: True
-  #default: 
-  #  external: 
-  #    name: qlines
+networks:
+  qlines_net:
+    name: custom_qlines_network
