--- a/Dockerfile_qlines
+++ b/Dockerfile_qlines
@@ -141,6 +141,7 @@ RUN chmod 777 mylogs.log
 # COPY DockerConfigFiles/_clickhouse_docker_related_config.xml /etc/clickhouse-server/config.d/docker_related_config.xml
 # RUN pip3 clickhouse_connect
 
-
 # To keep container alive
 #CMD /etc/init.d/all_daemons start;tail -f /dev/null
+#CMD python /opt/qlines_app/rqworker.py
+
